tests/ui/missing_absolute_path.stderr
error: Command path '/nonexistent/path/to/binary' does not exist on the build machine.
       If this path will exist at runtime, add it to allow_missing_paths.
 --> tests/ui/missing_absolute_path.rs:8:26
  |
8 |             command(cmd!("/nonexistent/path/to/binary")).key("binary")
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `cmd`
 --> tests/ui/missing_absolute_path.rs:3:22
  |
3 | use rust_buildkite::{cmd, pipeline};
  |                      ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
